# TressFX-OpenGL

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.sintel  README.md  Toolchain-fedora-mingw64.cmake
.github/workflows/: TressFX.yml
cmake/: Config.cmake
cmake/Modules/: FindSDL2.cmake
include/: pch.hpp
include/gl-utils/: pch.hpp
libs/amd_tressfx/include/: AMD_TressFX.h  TressFXAsset.h  TressFXCommon.h
libs/amd_tressfx/include/Math/: Quaternion.h  Vector3D.h
libs/amd_tressfx/src/: TressFXAsset.cpp  TressFXEngineInterface.h
libs/glad/: glad.c  glad.h
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/imgui/: imgui_draw.cpp  imgui_impl_sdl.cpp
src/: State.hpp  gui.impl.hpp  main.cpp
src/gl-tfx/: TFxSettings.hpp  include_TFx_pls_no_warnings.hpp  print_me.cpp
src/gl-tfx/GpuInterface/: TFxGpuInterface.cpp  barriers.impl.hpp
src/gl-utils/buffer/: malloc.impl.hpp
src/logging/: Logging.cpp  formatter.impl.hpp
